# XCalc

./: CMakeLists.txt  XCalcDef.hpp  XCalcMgr.hpp  XCalcProvider.hpp  XCalculator.hpp
include/: XCalc.h  XCalcDef.hpp  XCalcMgr.h  XCalcMgr.hpp  XCalcProvider.hpp  XCalculator.hpp  XIndicator.h  XIndicatorMgr.h
src/: CMakeLists.txt  XCalc.cpp
